# CS1B

./: .gitignore  Template.cpp
Assignment - Linked Lists/: CMakeLists.txt
Assignment-Functions&Arrays/: inFile.txt  main  oFile.txt  outputFile.txt
Assignment-TicTacToe/: main
BodyMassIndex/: Makefile
Lab - IntroToArrays/: main
Lab - Structs/: CMakeLists.txt  main
Lab - Testing/: CMakeLists.txt  Testing.xlsx
Lab-BinarySearch/: CMakeLists.txt
Lab-CoinFilp/: CMakeLists.txt  main
Lab-GCD/: output.txt
Lab-ThemePark/: main
Lab10CreatingOrderedList/: CMakeLists.txt
Lab10CreatingOrderedList/include/: header.h
Lab10CreatingOrderedList/src/: createList.cpp  findNodePlacement.cpp  insertNode.cpp  main.cpp  placeNodeBackofList.cpp  placeNodeFrontofList.cpp  readInput.cpp
Lab10CreatingOrderedList/src/handlers/: placeNodeFrontofList.cpp  readInput.cpp
LabGCD/: main
LabImplementingQueue/: final.cpp
LabLinked-List/: CMakeLists.txt
Labs/CreatingOrderedList/: CMakeLists.txt  final.cpp
Labs/CreatingOrderedList/include/: header.h
Labs/CreatingOrderedList/src/: main.cpp
Labs/CreatingOrderedList/src/handlers/: clearList.cpp  findNodePlacement.cpp  handleDisplayList.cpp  handleNodeBack.cpp  handleNodeFront.cpp  handleNodePlacement.cpp  handleSwitch.cpp  insertNode.cpp  isListEmpty.cpp  placeNodeBackofList.cpp  removeNode.cpp  searchName.cpp  validateInput.cpp
Labs/CreatingOrderedList/src/helpers/: displayHeader.cpp  displayMenu.cpp  heading.cpp  placeNodeBack.cpp  placeNodeFront.cpp  readInput.cpp
Labs/CreatingOrderedList/src/memory/: createList.cpp
(+145 files in other folders)
